tests/functional2/lang/attrs/parse-fail-duplicate-7.err.exp
error: attribute 'x' already defined at /pwd/in.nix:4:13
       at /pwd/in.nix:5:13:
            4|     inherit x;
            5|     inherit x;
             |             ^
            6|   };
